--- a/views/tamagotchi.html.twig
+++ b/views/tamagotchi.html.twig
@@ -30,6 +30,10 @@
             <form action='/sleep' method='post'>
                 <button type='submit'>Put to bed</button>
             </form>
+            <form action='/time' method='post'>
+                <button type='submit'>Wait</button>
+            </form>
+            
             <form action='/delete' method='post'>
                 <button type='submit'>Give up</button>
             </form>
