--- a/views/dead.html.twig
+++ b/views/dead.html.twig
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u' crossorigin='anonymous'>
+        <link href='css/styles.css' rel='stylesheet' type='text/css'>
         <title>Tamagotchi</title>
     </head>
     <body>
-        <p>{{ pet.name }} died.</p>
-        <form action='/delete' method='post'>
-            <button type='submit'>Try again</button>
-        </form>
+        <div class='container'>
+            <div class='jumbotron'>
+                <h1>Tamagotchi Simulator</h1>
+            </div>
+            <p>{{ pet.name }} has died.</p>
+            <form action='/delete' method='post'>
+                <button type='submit' class='btn btn-success'>Try again</button>
+            </form>
+        </div>
     </body>
 </html>
