--- a/views/tamagotchi.html.twig
+++ b/views/tamagotchi.html.twig
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u' crossorigin='anonymous'>
+        <link href='css/styles.css' rel='stylesheet' type='text/css'>
         <title>Tamagotchi</title>
     </head>
     <body>
-        {% if pet != NULL %}
-            <h2>{{ pet.name }}</h2>
-            <table>
-                <tr>
-                    <th>Food</th>
-                    <td>{{ pet.food }}</td>
-                </tr>
-                <tr>
-                    <th>Attention</th>
-                    <td>{{ pet.attention }}</td>
-                </tr>
-                <tr>
-                    <th>Rest</th>
-                    <td>{{ pet.rest }}</td>
-                </tr>
-            </table>
+        <div class='container'>
+            <div class='jumbotron'>
+                <h1>Tamagotchi Simulator</h1>
+            </div>
+            {% if pet != NULL %}
+                <div class='panel panel-success'>
+                    <div class='panel-heading'>
+                        <h2 class='panel-title'>{{ pet.name }}</h2>
+                    </div>
+                    <div class='panel-body'>
+                        <table>
+                            <tr>
+                                <th>Food</th>
+                                <td>{{ pet.food }}</td>
+                            </tr>
+                            <tr>
+                                <th>Attention</th>
+                                <td>{{ pet.attention }}</td>
+                            </tr>
+                            <tr>
+                                <th>Rest</th>
+                                <td>{{ pet.rest }}</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
 
-            <form action='/feed' method='post'>
-                <button type='submit'>Feed</button>
-            </form>
-            <form action='/play' method='post'>
-                <button type='submit'>Play with</button>
-            </form>
-            <form action='/sleep' method='post'>
-                <button type='submit'>Put to bed</button>
-            </form>
-            <form action='/time' method='post'>
-                <button type='submit'>Wait</button>
-            </form>
-            
-            <form action='/delete' method='post'>
-                <button type='submit'>Give up</button>
-            </form>
-        {% else %}
-            <form action='/tamagotchi' method='post'>
-                <label for='name'>Name</label>
-                <input id='name' name='name' type='text'>
+                <form action='/feed' method='post'>
+                    <button type='submit' class='btn btn-info'>Feed</button>
+                </form>
+                <form action='/play' method='post'>
+                    <button type='submit' class='btn btn-info'>Play with</button>
+                </form>
+                <form action='/sleep' method='post'>
+                    <button type='submit' class='btn btn-info'>Put to bed</button>
+                </form>
+                <form action='/time' method='post'>
+                    <button type='submit' class='btn btn-warning'>Wait</button>
+                </form>
 
-                <button type='submit'>Give birth</button>
-            </form>
-        {% endif %}
+                <form action='/delete' method='post'>
+                    <button type='submit' class='btn btn-danger'>Give up</button>
+                </form>
+            {% else %}
+                <form action='/tamagotchi' method='post'>
+                    <div class='form-group'>
+                        <label for='name'>Name</label>
+                        <input id='name' name='name' type='text' value="pet" class='form-control'>
+                    </div>
+
+                    <button type='submit' class='btn btn-success'>Give birth</button>
+                </form>
+            {% endif %}
+        </div>
     </body>
 </html>
